kustomize/base/tenant-shim/tenant-shim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenant-shim
spec:
  selector:
    app: tenant-shim
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
