kustomize/base/tenant-shim/tenant-shim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-shim
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "identity-platform.domain.local"
      secretName: "platform-tls"
  rules:
    - host: "identity-platform.domain.local"
      http:
        paths:
          - path: /environment
            pathType: Prefix
            backend:
              service:
                name: tenant-shim
                port:
                  number: 8080
          - path: /am/json/realms/root/realms/alpha/realm-config/secrets/stores/GoogleSecretManagerSecretStoreProvider
            pathType: Prefix
            backend:
              service:
                name: tenant-shim
                port:
                  number: 8080
          - path: /am/json/realms/root/realms/bravo/realm-config/secrets/stores/GoogleSecretManagerSecretStoreProvider
            pathType: Prefix
            backend:
              service:
                name: tenant-shim
                port:
                  number: 8080
